Added timestamp, inUse and usedBy information